Update Pages “portfolio”

--- a/src/data/Portfolio.yml
+++ b/src/data/Portfolio.yml
@@ -12,7 +12,7 @@ items:
     startDate: 2019-03-01T12:00:00.000Z
   - client: Interdynamix
     description: >-
-      Ideal is a automotive fintech startup (incubated in-house by a company
+      Ideal is an automotive fintech startup (incubated in-house by a company
       called Interdynamix) whose main product offering is a SaaS-style
       machine-learning enhanced Business Intelligence platform for automotive
       inventory holders, retailers, and lenders. Each platform ‘pod’ consists of
