--- a/src/data/Portfolio.yml
+++ b/src/data/Portfolio.yml
@@ -107,6 +107,7 @@ items:
     image: /images/portfolio/bc-showcase-app-vest.png
     projectName: VEST Tablet & Kiosk Apps
     startDate: 2016-05-01T12:00:00.000Z
+    testimonialId: phase3
   - client: Jimmy Poblano's Mexican Cantina
     description: >-
       We designed a custom SPA-style mobile-friendly Mexican-styled theme for
@@ -122,6 +123,7 @@ items:
     image: /images/portfolio/bc-showcase-jimmy-poblanos.png
     projectName: Jimmy Poblanos Food Truck Website
     startDate: 2016-05-01T12:00:00.000Z
+    testimonialId: jimmyp
   - client: Caffe Tech 2004 Ltd.
     description: >-
       Caffe Tech is an Edmonton based importer and distributor of premium
@@ -304,6 +306,7 @@ items:
     image: /images/portfolio/bc-showcase-carsgone.png
     projectName: Carsgone.com
     startDate: 2012-03-01T12:00:00.000Z
+    testimonialId: carsgone
   - client: Spasation
     description: >-
       Spasation is an Alberta-based chain of spas/salons. Uses a customized
@@ -315,6 +318,7 @@ items:
     image: /images/portfolio/bc-showcase-spasation.png
     projectName: Spasation Website and Online Store
     startDate: 2011-11-01T12:00:00.000Z
+    testimonialId: spasation
   - client: RMG Selection
     description: >-
       RMG Selection is an award-winning, China-focused international recruitment
@@ -340,6 +344,7 @@ items:
     endDate: 2011-06-01T12:00:00.000Z
     projectName: Product Matrix WordPress Extension
     startDate: 2011-06-01T12:00:00.000Z
+    testimonialId: active24
   - client: SoftControl
     description: >-
       Founded in Bangkok in 1993 by a team of German and Thai entrepreneurs,
